@@ -1811,7 +1811,7 @@ subtype <tt>Cluster</tt>, <tt>Module</tt>, <tt>Tile</tt>, <tt>Compute Unit</tt>,
 <li>Co-processor: subtype <tt>OpenCL</tt>, <tt>LevelZero</tt>, <tt>CUDA</tt>, or <tt>VectorEngine</tt>.</li>
 <li>GPU: subtype <tt>RSMI</tt> (AMD GPU) or <tt>NVML</tt> (NVIDIA GPU).</li>
 <li>OpenFabrics: subtype <tt>BXI</tt> (Bull/Atos BXI HCA).</li>
-<li>Block: subtype <tt>Disk</tt>, <tt>NVM</tt> (non-volatile memory), <tt>SPM</tt> (specific-purpose memory), <tt>Tape</tt>, or <tt>Removable Media Device</tt>.</li>
+<li>Block: subtype <tt>Disk</tt>, <tt>NVM</tt> (non-volatile memory), <tt>SPM</tt> (specific-purpose memory), <tt>CXLMem</tt> (CXL volatile ou persistent memory), <tt>Tape</tt>, or <tt>Removable Media Device</tt>.</li>
 </ul>
 </li>
 <li>L3 Caches:
@@ -1991,6 +1991,11 @@ and SectorSize (in bytes).
 </dd>
 <dt>LinuxDeviceID (Block OS devices)</dt>
 <dd>The major/minor device number such as 8:0 of Linux device.
+</dd>
+<dt>CXLRAMSize, CXLPMEMSize (CXL Memory Block OS devices)</dt>
+<dd>The size of the volatile (RAM) or persistent (PMEM) memory
+ in a CXL Type-3 device	     .
+ Sizes are in KiB (1024 bytes).
 </dd>
 <dt>GPUVendor, GPUModel (GPU or Co-Processor OS devices)</dt>
 <dd>The vendor and model names of the GPU device.
