@@ -20,6 +20,7 @@ bug fixes (and other actions) for each version of hwloc since version
 Version 2.9.0
 -------------
 * Backends
+  + Expose the memory size of CXL memory device (Type 3) on Linux.
   + The LevelZero backend now reports the "XeLinkBandwidth" distance
     matrix between L0 devices (and subdevices) when available.
   + Add support for CUDA compute capability up to 9.0.
